<resources>
    <string name="app_name">SENsational</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="colorize">COLORIZE</string>
    <string name="play">PLAY!</string>
    <string name="instructions">Instructions</string>
    <string name="quit">Quit</string>

    <string-array name="modes">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <!-- fragment names -->
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="view_post_fragment">View Post</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="profile_fragment">Profile</string>
    <string name="view_profile_fragment">ViewProfile</string>
    <string name="view_comments_fragment">View Comments</string>

    <!-- Intent Extras -->
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="intent_user">intent_user</string>
    <string name="user_stories">user_stories</string>

    <!-- activity names -->
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="home_activity">Home Activity</string>

    <!-- Firebase messages -->
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>
    <string name="register_failed">An account with this email already registered.
        Please login or check your inbox.</string>
    <string name="register_success">Signup successful. Sending verification email.</string>
    <string name="email_fail">Sending verification email has failed.</string>
    <string name="database_fail">Failed to retrieve database information.</string>
    <string name="fill_inputs">Fields must be filled out.</string>
    <string name="shorter_title">Please input a shorter title.</string>
    <string name="proper_tag">Please input a proper tag.</string>
    <string name="one_tag">Please input only one tag.</string>
    <string name="letters_tag">Please input a tag that only contains letters.</string>
    <string name="post_success">Successfully posted.</string>
    <string name="post_fail">Posting unsuccessful. Try again.</string>
    <string name="display_public">Displaying public posts.</string>
    <string name="display_private">Displaying private posts.</string>
    <string name="see_public">See Public</string>
    <string name="see_private">See Private</string>
    <string name="login_error">Incorrect email or password. Please try again.</string>
    <string name="email_not_verified">Email is not verified. Check your email inbox.</string>
    <string name="login_request">Please input your email and password.</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_posts">posts</string>
    <string name="dbname_user_posts">user_posts</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="dbname_stories">stories</string>
    <string name="dbname_tags">tags</string>
    <string name="dbname_user_likes">user_likes</string>
    <string name="dbname_user_unlikes">user_unlikes</string>

    <string name="field_posts">posts</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_password">password</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_private">private</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_location">location</string>
    <string name="field_age">age</string>
    <string name="field_information">information</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_like_count">likeCount</string>
    <string name="field_unlikes">unlikes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_post_id">postID</string>
    <string name="field_title">title</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>
    <string name="field_comment">comment</string>
    <string name="field_image_uri">image_uri</string>
    <string name="field_video_uri">video_uri</string>
    <string name="field_story_id">story_id</string>
    <string name="field_views">views</string>
    <string name="field_duration">duration</string>
    <string name="field_profile_photo">profile_photo</string>
    <string name="field_timestamp">timestamp</string>
    <string name="bubbles_title">BUBBLES!</string>
    <string name="instructions1a">Bubbles will float up on the screen one by one. Try to remember
        the color of each bubble. </string>
    <string name="instructions2">Pick the color of each bubble in the right order.</string>
    <string name="instructionsLabel">Instructions:</string>
    <string name="select_mode_label">Mode:</string>
    <string name="targets_label">Targets:</string>
    <string name="working_memory">Working Memory</string>
    <string name="attention_span">Attention Span</string>
    <string name="play_bubbles">PLAY</string>
    <string name="score_label">Score:</string>
    <string name="calming">Calming</string>
    <string name="mode_1">Mode 1</string>
    <string name="mode_2">Mode 2</string>
    <string name="mode_3">Mode 3</string>
    <string name="welcome_to_calming">Welcome to Calming! This function will help you calm down,
        using breathing exercises and colorful distractions. Simply follow the circle with your
        breathing.</string>
    <string name="back">Back</string>
    <string name="pause">II</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breathe_in">Breathe In</string>
    <string name="_1">1</string>
    <string name="mode_1_garden">Mode 1: Garden</string>
    <string name="mode_1_candy">Mode 1: Candy</string>
    <string name="mode_2_garden">Mode 2: Garden</string>
    <string name="least_distraction">Least distraction</string>
    <string name="mode_3_ocean">Mode 3: Ocean</string>
    <string name="follow_the_circle_and_breathe_in_hold_then_breathe_out">Follow the circle and
        breathe in, hold, then breathe out.</string>
    <string name="medium_distraction">Medium distraction</string>
    <string name="most_distraction">Most distraction</string>
    <string name="select_mode">Select mode:</string>
    <string name="games">Games</string>
    <string name="instruction_3_main">3. For parents: Use the anonymous forum \n to reach out for
        support!</string>
    <string name="instruction_1_main">1. Play some fun games to develop your executive function
        skills!</string>
    <string name="welcome_main">Welcome to Clover!</string>
    <string name="instruction_2_main">2. Use the calming feature when you\'re \n feeling upset or
        angry.</string>
    <string name="forum">Forum</string>
    <string name="play_again">Play Again</string>
    <string name="exit_game">Exit Game</string>
    <string name="finished_game">You finished the game!</string>
    <string name="yay">YAY!</string>
    <string name="total">Total:</string>
    <string name="you_won">You won:</string>
    <string name="what_color_was_the">What color was the</string>
    <string name="bubble">bubble?</string>
    <string name="first">first (1st) </string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="one">1</string>
    <string name="home_page">Home Page</string>
    <string name="title_activity_calming_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="select_breathe_in_time">Select breathe in time:</string>
    <string name="music">Music</string>
    <string name="select_hold_time">Select hold time</string>
    <string name="next_round">Next Round!</string>

</resources>
