<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEFFE8"
    tools:context=".Controller.Calming.CalmingMode2Activity">

    <Button
        android:id="@+id/backButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:onClick="backButton"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pauseButton2"
        android:layout_width="101dp"
        android:layout_height="75dp"
        android:layout_marginBottom="24dp"
        android:onClick="pauseButton"
        android:text="@string/pause"
        android:textColor="#DEFFE8"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/bf1"
        android:layout_width="110dp"
        android:layout_height="105dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="312dp"
        android:rotation="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bf1" />

    <ImageView
        android:id="@+id/bf4"
        android:layout_width="97dp"
        android:layout_height="80dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="120dp"
        android:rotation="-5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bf2" />

    <ImageView
        android:id="@+id/bf2"
        android:layout_width="102dp"
        android:layout_height="83dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="129dp"
        android:rotation="40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bf3" />

    <ImageView
        android:id="@+id/bf3"
        android:layout_width="132dp"
        android:layout_height="99dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="192dp"
        android:rotation="-15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bf4" />

    <ImageView
        android:id="@+id/bf5"
        android:layout_width="78dp"
        android:layout_height="54dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="52dp"
        android:rotation="-30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bf6" />

    <ImageView
        android:id="@+id/sun"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sun" />

    <ImageView
        android:id="@+id/grass"
        android:layout_width="460dp"
        android:layout_height="379dp"
        android:layout_marginTop="469dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/grass" />

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="302dp"
        android:layout_height="298dp"
        android:layout_marginTop="217dp"
        android:layout_marginBottom="216dp"
        android:tint="#A0FFBA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle" />

    <ImageView
        android:id="@+id/bf6"
        android:layout_width="108dp"
        android:layout_height="76dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="276dp"
        android:rotation="-10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bf5" />

    <TextView
        android:id="@+id/breatheTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="315dp"
        android:text="@string/breathe_in"
        android:textColor="#0C0C0C"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="364dp"
        android:text="@string/_1"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>