<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6FAFF"
    tools:context=".Controller.Calming.CalmingMode1Activity">

    <Button
        android:id="@+id/backButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:onClick="backButton"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pauseButton1"
        android:layout_width="101dp"
        android:layout_height="75dp"
        android:layout_marginBottom="24dp"
        android:onClick="pauseButton"
        android:text="@string/pause"
        android:textColor="#E6FAFF"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/rainbow"
        android:layout_width="823dp"
        android:layout_height="420dp"
        android:layout_marginStart="485dp"
        android:layout_marginEnd="-100dp"
        android:rotation="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rainbow" />

    <ImageView
        android:id="@+id/cc1"
        android:layout_width="84dp"
        android:layout_height="116dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="181dp"
        android:rotation="-30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cc1" />

    <ImageView
        android:id="@+id/candy1"
        android:layout_width="98dp"
        android:layout_height="84dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="98dp"
        android:rotation="-30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/candy1" />

    <ImageView
        android:id="@+id/candy2"
        android:layout_width="98dp"
        android:layout_height="84dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="119dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/candy2" />

    <ImageView
        android:id="@+id/candy3"
        android:layout_width="97dp"
        android:layout_height="72dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="164dp"
        android:rotation="25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/candy3" />

    <ImageView
        android:id="@+id/cupcake"
        android:layout_width="190dp"
        android:layout_height="219dp"
        android:layout_marginBottom="42dp"
        android:rotation="-10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cupcake" />

    <ImageView
        android:id="@+id/lollipop"
        android:layout_width="158dp"
        android:layout_height="180dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="104dp"
        android:rotation="-30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lollipop" />

    <ImageView
        android:id="@+id/cc2"
        android:layout_width="91dp"
        android:layout_height="158dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="112dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cc2" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="302dp"
        android:layout_height="298dp"
        android:layout_marginTop="217dp"
        android:layout_marginBottom="216dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle" />

    <TextView
        android:id="@+id/breatheTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="317dp"
        android:text="@string/breathe_in"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="364dp"
        android:text="@string/_1"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>